--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
 <body>
 <main id="app" class="section container">
   <b-field>
-    <b-input v-model="username" placeholder="Username or E-Mail"></b-input>
+    <b-input v-model="username" placeholder="Username or E-Mail" @input="checkIsRegistered()"></b-input>
   </b-field>
   <div>
     <b-button type="is-primary" @click="register()" :disabled="!username || isRegistered">Register</b-button>
@@ -35,18 +35,18 @@
     el: '#app',
     data: {
       username: null,
-    },
-    computed: {
-      isRegistered() {
-        console.log(this.username + ' => ' + !!window.localStorage.getItem(this.username))
-        return !!window.localStorage.getItem(this.username)
-      }
+      isRegistered: false,
     },
     methods: {
+      async checkIsRegistered() {
+        console.log(this.username + ' => ' + !!window.localStorage.getItem(this.username))
+        this.isRegistered = !!window.localStorage.getItem(this.username)
+      },
       async register() {
         let res = await register(this.username)
         console.log(res)
         window.localStorage.setItem(this.username, res.credential.id)
+        await checkIsRegistered()
       },
       async login() {
         let credentialId = window.localStorage.getItem(this.username)
