--- a/form.html
+++ b/form.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
   <style>
+    html {
+      overflow-y: auto;
+    }
     main.container {
       max-width: 400px !important;
       text-align: center;
