--- a/form.html
+++ b/form.html
@@ -28,8 +28,8 @@
       <b-checkbox v-model="isExternal">Use extern authenticator</b-checkbox>
     </b-field>
     <div>
-      <b-button type="is-primary" @click="register()" :disabled="!username || isRegistered">Register</b-button>
-      <b-button type="is-primary" @click="login()" :disabled="!isRegistered">Sign In</b-button>
+      <b-button type="is-primary" @click="register()" :disabled="!username">Register device</b-button>
+      <b-button type="is-primary" @click="login()" :disabled="!isRegistered">Authenticate</b-button>
     </div>
   </template>
   <template v-if="isAuthenticated">
@@ -43,6 +43,7 @@
 
 <script src="https://unpkg.com/vue@2"></script>
 <script src="https://unpkg.com/buefy/dist/buefy.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <script type="module" src="js/demo.js"></script>
 </body>
