Work in progress...

--- a/playground.html
+++ b/playground.html
@@ -28,10 +28,12 @@
       justify-content: center;
       align-items: center;
     }
+
     .with-big-icon img {
       height: 4rem;
       margin: 0 1rem;
     }
+
     .col {
         display: flex;
         flex-direction: column;
@@ -206,6 +208,6 @@
 <script src="https://unpkg.com/buefy/dist/buefy.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-<script type="module" src="js/debugger.js"></script>
+<script type="module" src="js/playground.js"></script>
 </body>
 </html>
