--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
     <br/>
     <template v-if="!isAuthenticated">
       <b-field>
-        <b-input name="username" v-model="username" placeholder="Username or E-Mail" @input="checkIsRegistered()" autocomplete="webauthn username"></b-input>
+        <b-input name="username" v-model="username" placeholder="Username or E-Mail" @input="checkIsRegistered()" autocomplete="username webauthn"></b-input>
       </b-field>
       <b-field>
         <b-checkbox v-model="isRoaming">Use roaming authenticator</b-checkbox>
