--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/buefy@0.9.23/dist/buefy.min.css">
   <style>
     html {
       overflow-y: auto;
@@ -41,8 +41,8 @@
     </template>
   </main>
 
-  <script src="https://unpkg.com/vue@2"></script>
-  <script src="https://unpkg.com/buefy/dist/buefy.min.js"></script>
+  <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
+  <script src="https://unpkg.com/buefy@0.9.23/dist/buefy.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
   <script type="module" src="js/demo.js"></script>
